# CrewAI_Projects

./: README.md  pyproject.toml
clash_of_the_llms/: README.md  pyproject.toml
clash_of_the_llms/output/: decide.md  oppose.md  propose.md
clash_of_the_llms/src/clash_of_the_llms/: crew.py  main.py
clash_of_the_llms/src/clash_of_the_llms/config/: agents.yaml  tasks.yaml
clash_of_the_llms/tests/: test_LLMs.py
code_master/: README.md  pyproject.toml
code_master/output/: code_and_output.txt
code_master/src/code_master/: crew.py  main.py
code_master/src/code_master/config/: agents.yaml  tasks.yaml
engineering_team/: README.md  pyproject.toml
engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
engineering_team/src/engineering_team/: crew.py
engineering_team/src/engineering_team/config/: agents.yaml
financial_researcher/: pyproject.toml
financial_researcher/output/: report.md  research.md
financial_researcher/src/financial_researcher/: main.py
financial_researcher/src/financial_researcher/config/: agents.yaml  tasks.yaml
stock_picker/: pyproject.toml
stock_picker/memory/: long_term_memory_storage.db
stock_picker/output/: decision.md  research_report.json  trending_companies.json
stock_picker/src/: test_notification.py
stock_picker/src/stock_picker/: crew.py
stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
stock_picker/src/stock_picker/tools/: push_tool.py
