[project]
name = "code_master"
version = "0.1.0"
description = "code_master using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
code_master = "code_master.main:run"
run_crew = "code_master.main:run"
train = "code_master.main:train"
replay = "code_master.main:replay"
test = "code_master.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
